<resources>
    <string name="app_name">Poto</string>
    <string name="logo">POTO</string>
    <string name="logo_image">This is logo of application</string>
    <string name="title_signin">ĐĂNG NHẬP</string>
    <string name="autofillhint_email">email</string>
    <string name="autofillhint_password">password</string>
    <string name="button_Signin">ĐĂNG NHẬP</string>
    <string name="link_forgot_password">Quên mật khẩu?</string>
    <string name="or">Hoặc</string>
    <string name="create_account">TẠO TÀI KHOẢN</string>
    <string name="hint_Email">Nhập Email</string>
    <string name="hint_Password">Nhập mật khẩu</string>
    <string name="title_signup">ĐĂNG KÝ</string>
    <string name="button_Signup">ĐĂNG KÝ</string>
    <string name="button_Message">NHẮN TIN</string>
    <string name="button_Call">GỌI ĐIỆN</string>
    <string name="button_verified">XÁC MINH</string>
    <string name="button_View">THÔNG TIN CHỦ PHÒNG</string>
    <string name="button_delete">XÓA</string>
    <string name="title_forgotpass">QUÊN MẬT KHẨU</string>
    <string name="button_confirmpass">TẠO MẬT KHẨU</string>
    <string name="confirmEmail">XÁC NHẬN</string>

    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Settings</string>
    <string name="action_exit">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="linktoforgot">
        <a href="https://www.facebook.com/shinigami.tran.7">Forgot your password?</a>
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Roommate</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="title_room">Room</string>
    <string name="title_user">User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_select_photo">Chọn ảnh</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_notifications">Notifications</string>
</resources>
